--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 
   datasource:
     username: root
-    password: iemf
+    password: iemf12345
     url: jdbc:mysql://localhost:3306/userManagementSystem
     driver-class-name: com.mysql.cj.jdbc.Driver
 
